--- a/jp/index.qmd
+++ b/jp/index.qmd
@@ -141,34 +141,22 @@ a:hover {
 :::
 
 
-# Story and Quiz — 私は父から研究を学んだ
+# コーヒーを淹れて、言葉を交わす。湯気とともに時は流れ、統計の世界が少しずつ広がっていく。
 
-このシリーズは、がんサバイバーの就労支援の話を軸に、研究方法や統計学の考え方を **ストーリー形式** で学ぶ読み物です。医師である娘と、統計家である父のコーヒーチャットを追いながら、
+このサイトは、統計家の父と医師の娘が交わす小さなコーヒーチャットから生まれました。
+日常の疑問、論文で気になるまま読み進めた箇所、ふと理解が曖昧なままにしていた概念——それらを対話のペースでやわらかく解きほぐしていきます。
 
-1. 研究の設計
-2. 頻度論（Frequentist）のものの見方
-3. 効果指標と時間
-4. バイアス調整と回帰
-5. 因果推論
-6. 研究結果をエビデンスにする営み
-
-と、少しずつ視点が高くなっていきます。
-
-- 研究をはじめる前に、**「全体像」や「言葉の感覚」** をつかみたい人へ
-- 1話あたり数分で読めて、**じんわりと核心がわかる** 軽い語り口
-- どこから読んでもよいけれど、通して読むと「研究という営み」の地図になります
-
-最初の1本はここからどうぞ。
-
-→ [Study design I](study-design-1.qmd)
+難しい統計手法や数式も、冬のマグカップから感じるぬくもりのように、温度のある言葉でそっと説明します。
+物語はRコードで再現可能。
+深く学びたい人も、少し立ち止まりたい人も、夜の静かな時間に読む小さなエッセイのように、どうぞゆっくり味わってください。
 
 ------------------------------------------------------------------------
 
 ## シリーズ一覧
 
-### 1. Study design
+### 1. Study design — 研究の出発点
 
-**研究仮説**、**アウトカム**、**2値データと生存時間データ**、**調査に潜むバイアス**。娘は父に研究の出発点について尋ねます。
+研究は「どんな問いを立てるか」から始まります。PICO/PECO、アウトカムの選び方、バイアスの防ぎ方...。娘は父に研究の出発点について尋ねます。
 
 - [Study design I](study-design-1.qmd)
 - [Study design II](study-design-2.qmd)
@@ -176,9 +164,9 @@ a:hover {
 - [Study design IV]
 - [Study design V]
 
-### 2. Frequentist thinking
+### 2. Frequentist thinking — 統計学の実践
 
-がん臨床試験を題材に、「仮想的に何度も研究を繰り返したときに、数字はどう振る舞うか？」という**頻度論の直観**を扱います。
+がん臨床試験を題材に「仮想的に何度も研究を繰り返したときに、数字はどう振る舞うか？」という**頻度論の思想**を父は語ります。
 
 - [Frequentist thinking I]
 - [Frequentist thinking II]
@@ -186,9 +174,10 @@ a:hover {
 - [Frequentist thinking IV]
 - [Frequentist thinking V]
 
-### 3. Effects and time
+### 3. Effects and time — 効果は時間とともに
 
-リスク・リスク差・リスク比・オッズ比、NNT、ワクチン有効率、そして**時間とともに変化する効果**を、生存曲線・累積発生曲線の視点から眺めます。
+リスク差・リスク比・ハザード比、ワクチン有効率、寄与割合、そして**時間とともに変化する効果**を、生存曲線・累積発生曲線とともに紐解きます。
+因果推論に先立って立体的なデータの見方が静かに育ちます。
 
 - [Effects and time I]
 - [Effects and time II]
@@ -196,7 +185,7 @@ a:hover {
 - [Effects and time IV]
 - [Effects and time V]
 
-### 4. Adjusting for bias
+### 4. Adjusting for bias — 回帰分析の風景
 
 **ロジスティック回帰による調整**と**交絡**。
 
@@ -205,7 +194,7 @@ a:hover {
 - [Adjusting for bias III]
 - [Adjusting for bias IV]
 
-### 5. Causal inference
+### 5. Causal inference — 因果を見つけるために
 
 有効非循環グラフ（DAG）、共通原因、合流点、中間媒介因子、バックドア条件。「もし〜だったら？」を統計的に考えるための**因果の言葉**を、できるだけ数式を使わずに扱います。
 
@@ -214,9 +203,9 @@ a:hover {
 - [Causal inference III]
 - [Causal inference IV]
 
-### 6. The Craft of Research
+### 6. The Craft of Research — 研究の営み
 
-図表の作り方、STROBE、査読コメントへの対応、推敲のコツ。研究結果を正確に伝え、質の高いエビデンスを創ろうとする**研究者の姿**を描きます。
+研究結果をどう伝えるか、図表の作り方、推敲のコツ、査読の向き合い方。統計の“その先”を扱う、研究者のための静かな講義。
 
 - [The Craft of Research I]
 - [The Craft of Research II]
@@ -236,4 +225,4 @@ a:hover {
   - **最終的に論文として形にしたい** → The Craft of Research
 - どのエピソードも、それだけで読めるように書いていますが、  
   通して読むと「研究という営み」の地図が、少しずつ頭の中にできあがっていきます。  
-  コーヒー片手に、気になったところから読んでみてください。
+  お好みの飲み物を片手に、気になったところから読んでみてください。
