--- a/jp/study-design-2.qmd
+++ b/jp/study-design-2.qmd
@@ -299,7 +299,7 @@ a:hover {
 :::
 :::::::::::::::::::::::::::::::::::::::
 
-::: {.callout-note title="シミュレーションデータの生成"}
+::: {.callout-note appearance="simple" title="シミュレーションデータの生成"}
 ここでは、Rを使って簡単なシミュレーションデータを作り、連続データ・2値データ・生存時間データそれぞれについて、代表的な解析のデモをします。題材は「ストーマ保有者と非保有者の2群比較」です。
 
 -   年齢：正規分布（rnorm）から生成した連続データ
@@ -338,7 +338,7 @@ head(dat)
 ```
 :::
 
-::: {.callout-note title="連続データと2値データの要約"}
+::: {.callout-note appearance="simple" title="連続データと2値データの要約"}
 まず、`ggplot2`パッケージの`ggplot()`と、`table()`を使って、ストーマあり群とストーマなし群のデータを**ヒストグラム**と**分割表**で記述しています。シミュレーションの設定を踏まえると、ヒストグラムでは、ストーマありとなしの間で、年齢の分布がずれているはずです。
 
 ```{r warning=FALSE}
@@ -354,7 +354,7 @@ table(STOMA = dat$stoma, SEX = dat$sex)
 ```
 :::
 
-::: {.callout-note title="生存曲線による生存時間データの要約"}
+::: {.callout-note appearance="simple" title="生存曲線による生存時間データの要約"}
 次の生存時間データでは、`cifmodeling`パッケージの`cifplot()`を使って、**Kaplan–Meier曲線**を描いてみます。ストーマ保有者より、非保有者の方が、生存曲線が高くなる（生存期間が長くなる）はずです。
 
 ```{r warning=FALSE}
@@ -367,7 +367,7 @@ cifplot(Event(time, status) ~ stoma,
 ```
 :::
 
-::: {.callout-note title="このエピソードに関係するクイズです"}
+::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
 奏効率（response rate）とは、抗がん剤による治療を行った結果、何割の患者で腫瘍が縮小したか（完全奏効または部分奏効を達成したか）や血液から腫瘍細胞が消えたか（完全寛解）を表す指標です。この用語は広く用いられていますが、Japan Clinical Oncology Group（JCOG）では奏効割合（response proportion）という表現を好んでいます（Japan Clinical Oncology Group 2021）。
 
 さて、次の指標のうち、率（rate）に該当するのはどれでしょうか。
@@ -378,7 +378,7 @@ cifplot(Event(time, status) ~ stoma,
 4.  死亡率
 :::
 
-::: {.callout-note collapse="true" title="答えはこちら"}
+::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
 -   **正解は4です。**
 
 割合、率、比の3つの違いについて説明しましょう。比とは、ある量を別の量で割ったもののことです。たとえば、BMIは体重を身長で割ったものですから比の一種で、単位はkg/m2です。割合は、一部の数を全体の数で割ったもの（言い換えると、分母が分子を含んでいるもの）です。割合は、もちろん2値データや分類データを要約するために用いられる指標ですよね。この指標は、言葉の定義からいって、比の一種です。しかし、割合は、①100%を超えない、②人数を人数で割っているためキャンセルして単位がない（無単位）という特徴があります。割合と区別してほしいのが率です。たとえば胃がんの発生率（incidence rate of gastric cancer）というと、一定時間に胃がんが発生するスピードで、人年法（胃がんの発生数/観察人年）で計算されます。人数を人数×年で割っているため、単位は1/年（より一般には1/時間）です。
