--- a/jp/study-design-4.qmd
+++ b/jp/study-design-4.qmd
@@ -283,7 +283,7 @@ a:hover {
 ::::::::::::::::::::::::::::::::: 
 
 
-::: {.callout-note title="シミュレーションデータの生成"}
+::: {.callout-note appearance="simple"  title="シミュレーションデータの生成"}
 
 **データの型** アウトカムはデータの型によって4種類に分類されます。
 
@@ -323,7 +323,7 @@ a:hover {
 |  | なし | あり | Fine-Grayモデル | 回帰モデルの一種 |
 :::
 
-::: {.callout-note title="このエピソードに関係するクイズです"}
+::: {.callout-note appearance="simple"  title="このエピソードに関係するクイズです"}
 
 臨床検査の正常範囲の意味として正しいのはどれでしょうか。
 
@@ -334,7 +334,7 @@ a:hover {
 
 :::
 
-::: {.callout-note collapse="true" title="答えはこちら"}
+::: {.callout-note appearance="simple"  collapse="true" title="答えはこちら"}
 -   **正解は2です**
 
 標準偏差（SD）と標準誤差（SE）の区別が重要です。前者は「検査値自体が個人間でどのくらいばらつくか」を、後者は「平均の推定がどのくらい精確か」を表しています。そして、「平均±1.96×標準偏差」は、正規分布における「95%が含まれる範囲」に相当しています。
