--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -244,7 +244,7 @@ a:hover {
 ::::::::::::::::::::::::::::::::: 
 
 
-::: {.callout-note title="ランダム誤差とバイアス"}
+::: {.callout-note appearance="simple"  title="ランダム誤差とバイアス"}
 
 統計学は誤差を扱う学問ですが、臨床研究ではランダム誤差（random error）とバイアス（bias）を区別することが大切です。ランダム誤差は、基本的にはゼロを中心としたばらつきを想定しています。一方で、得られた推定値が真の値から系統的にずれていることを、バイアスといいます。臨床研究における統計学の目標は、ランダム誤差を制御し、バイアスを可能な限りゼロに近づけることです。
 
@@ -253,7 +253,7 @@ a:hover {
 ![](study-design-5.png)
 :::
 
-::: {.callout-note title="このエピソードに関係するクイズです"}
+::: {.callout-note appearance="simple"  title="このエピソードに関係するクイズです"}
 
 ランダム誤差とバイアスへ対処するために様々な工夫がなされますが、それを検討するタイミングは、研究計画段階と統計解析段階にわけることができます。これを踏まえて、臨床研究の考え方として正しいのは、次のうちどれでしょうか。
 
@@ -263,7 +263,7 @@ a:hover {
 4.  臨床試験では研究デザインが重要。観察研究では統計解析が重要
 :::
 
-::: {.callout-note collapse="true" title="答えはこちら"}
+::: {.callout-note appearance="simple"  collapse="true" title="答えはこちら"}
 -   **正解は3です**
 
 サンプルサイズが小さすぎることが、ランダム誤差の一番の原因です。こう考えると、ランダム誤差・バイアスのどちらも、研究計画段階でじゅうぶんに検討しておかないと、後から取り返しがつかないかもしれません。
