--- a/jp/effects-1.qmd
+++ b/jp/effects-1.qmd
@@ -149,7 +149,7 @@ a:hover {
 
 ### 98%って聞いたら100人いたら98人に効くって思わない？
 
-::: {.callout-note collapse="true" title="前回までのあらすじ"}
+::: {.callout-note appearance="simple"  collapse="true" title="前回までのあらすじ"}
 はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、医師である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。それからというもの、父は娘に統計の話をふるチャンスをうかがっていた。
 :::
 
@@ -188,7 +188,7 @@ a:hover {
 
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note title="リスクを比較するための基本的な指標"}
+::: {.callout-note appearance="simple"  title="リスクを比較するための基本的な指標"}
 医学では分野によってさまざまな指標が用いられており、特に割合を比較する指標にはわかりにくいものが少なくありません。割合を理解するための最初のステップは分割表です。
 
 |          | 群1 | 群2 |
@@ -214,7 +214,7 @@ a:hover {
 これらの指標を使うときは、どちらの群を基準に比較しているかを意識することが大切です。上の式では群2を基準にとっています。
 :::
 
-::: {.callout-note title="治療の有効性を比較するための指標"}
+::: {.callout-note appearance="simple"  title="治療の有効性を比較するための指標"}
 特に、2種類の治療のどちらが有効か調べるために比較するケースでは、以下の指標もよく用いられます。どちらの指標でも$\pi_2>\pi_1$と想定されています。ワクチン有効率では、群2はプラセボを受けていると考えてください。
 
 -   Number needed to treat（NNT）
@@ -253,33 +253,20 @@ a:hover {
 
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note title="このエピソードに関係するクイズです"}
+::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
+-   **正解は4です。**
 
-次の表は、ワクチンとプラセボを比較した仮想的な臨床試験のデータです。表の人数からワクチン有効率を計算してみましょう。
+割合、率、比の3つの違いについて説明しましょう。比とは、ある量を別の量で割ったもののことです。たとえば、BMIは体重を身長で割ったものですから比の一種で、単位はkg/m2です。割合は、一部の数を全体の数で割ったもの（言い換えると、分母が分子を含んでいるもの）です。割合は、もちろん2値データや分類データを要約するために用いられる指標ですよね。この指標は、言葉の定義からいって、比の一種です。しかし、割合は、①100%を超えない、②人数を人数で割っているためキャンセルして単位がない（無単位）という特徴があります。割合と区別してほしいのが率です。たとえば胃がんの発生率（incidence rate of gastric cancer）というと、一定時間に胃がんが発生するスピードで、人年法（胃がんの発生数/観察人年）で計算されます。人数を人数×年で割っているため、単位は1/年（より一般には1/時間）です。
 
-|          | ワクチン群 | プラセボ群 |
-|----------|------------|------------|
-| 発症あり |        10  |        200 |
-| 発症なし |       990  |        800 |
-|発症リスク|        1%  |        20% |
+「打率」は安打数÷打数であり、「割合」になります。
 
-1.  80%
-2.  90%
-3.  95%
-4.  99%
+「男女比率」は男性の人数÷女性の人数であり、「比」になります。
 
+「有病率」は疾患を有する人の人数÷全体の人数であり、「割合」になります。
+
+「死亡率」は死亡件数÷観察人年であり、「率」になります。
 :::
 
-::: {.callout-note collapse="true" title="答えはこちら"}
-
-- **正解は3です**
-
-$\pi_1 = 10/1000 = 0.01$ 
-
-$\pi_2 = 200/1000 = 0.2$ 
-
-$VF=\frac{\pi_2-\pi_1}{\pi_2}=95 \%$
-:::
 
 ### Continuation of their story
 
