--- a/jp/study-design-4.qmd
+++ b/jp/study-design-4.qmd
@@ -323,24 +323,24 @@ a:hover {
 |  | なし | あり | Fine-Grayモデル | 回帰モデルの一種 |
 :::
 
-::: {.callout-note appearance="simple"  title="このエピソードに関係するクイズです"}
 
-臨床検査の正常範囲の意味として正しいのはどれでしょうか。
+::: {.callout-note title="このエピソードに関係するクイズです"}
 
-1.  ある集団からのランダムサンプルにおいて検査値の平均±1.96×標準偏差
-2.  健常人集団における検査値の95%が含まれる範囲
-3.  健常人集団における検査値の平均±1.96×標準誤差
-4.  ある集団からのランダムサンプルにおいて検査値の95%が含まれる範囲
+Kaplan-Meier法による生存曲線の推定が妥当な状況として正しいのは、次のうちどれでしょうか。
 
+1.  生存時間が正規分布するとき
+2.  打ち切りの理由が疾患の悪化によらないとき
+3.  2群の打ち切り確率に統計学的な有意差がなかったとき
+4.  試験治療群とコントロール群の間で比例ハザード性が成り立つとき
 :::
 
-::: {.callout-note appearance="simple"  collapse="true" title="答えはこちら"}
--   **正解は2です**
+::: {.callout-note collapse="true" title="答えはこちら"}
+- **正解は2です**
 
-標準偏差（SD）と標準誤差（SE）の区別が重要です。前者は「検査値自体が個人間でどのくらいばらつくか」を、後者は「平均の推定がどのくらい精確か」を表しています。そして、「平均±1.96×標準偏差」は、正規分布における「95%が含まれる範囲」に相当しています。
-
-なお、似て非なる範囲に「平均±1.96×標準誤差」があります。これは頻度論統計学（frequentist statistics）において95%信頼区間（confidence interval）と呼ばれる区間です。
+Kaplan-Meier法では、生存時間が正規分布したり、比例ハザードが成り立ったりする必要はありません（これはそれぞれ*t*検定とCox回帰の前提条件ですね）。疾患の悪化に伴って、試験の途中で患者が追跡できなくなると、推定された生存曲線にバイアスが生じてしまいます。2群の生存曲線を比べるとき、それぞれの群の打ち切り確率を比較することがあります。有意差があればバイアスがあるといえますが、たとえばサンプルサイズが小さいときは有意差が出ませんから、Kaplan-Meier法が妥当という証拠にはなりません。逆にいうと、打ち切りがランダムに起きていることが、Kaplan-Meier法でもっとも重要な仮定です。
 :::
+
+
 
 ### 文献
 
