--- a/jp/study-design-3.qmd
+++ b/jp/study-design-3.qmd
@@ -246,7 +246,7 @@ a:hover {
 :::::::::::::::::::::::::::::::::
 
 
-::: {.callout-note title="シミュレーションデータ（再発あり）の生成"}
+::: {.callout-note appearance="simple" title="シミュレーションデータ（再発あり）の生成"}
 前回の発展形として、シミュレーションデータを使って、全生存期間（OS）・無再発生存期間（RFS）・累積再発率（CIR）の違いをみてみましょう。CIRの解析では、再発の前に死亡した患者が存在するため、その扱いを決める必要があります。これを競合リスク（competing risk）といいます。
 
 以下のコードでは、死亡だけではなく再発を伴った生存時間アウトカム3種類をRで生成する「関数」generate_dataを定義しています。OSのイベントは「死亡」、RFSのイベントは「死亡と再発」です。CIRのイベントは「再発」ですが、死亡を競合リスクとして扱います。なお、generate_data()やこのシミュレーションデータは、今後の解説でも再利用する予定です。
@@ -258,7 +258,7 @@ a:hover {
 前回、競合リスクのない生存時間データを要約しましたが、そこで用いたのはKaplan-Meier曲線でしたよね。それに対して、競合リスクデータの解析では、Kaplan-Meier曲線ではなく、Aalen-Johansen曲線を用いるのが正式です。
 :::
 
-::: {.callout-note collapse="true" title="データ生成に用いるgenerate_data()のコードはこちら"}
+::: {.callout-note appearance="simple"  collapse="true" title="データ生成に用いるgenerate_data()のコードはこちら"}
 ```{r warning=FALSE}
 generate_data <- function(n=200, hr1, hr2) {
   stoma <- rbinom(n, size = 1, prob = 0.4)
@@ -309,7 +309,7 @@ generate_data <- function(n=200, hr1, hr2) {
 :::
 
 
-::: {.callout-note title="全生存期間（OS）のKaplan–Meier曲線"}
+::: {.callout-note appearance="simple"  title="全生存期間（OS）のKaplan–Meier曲線"}
 OSとRFSは通常の生存時間データですから、前回と同様に、`cifmodeling`パッケージの`cifplot()`を使って、**Kaplan–Meier生存曲線**で記述します。
 
 ```{r warning=FALSE}
@@ -326,7 +326,7 @@ cifplot(Event(time_os, status_os) ~ stoma,
 ```
 :::
 
-::: {.callout-note title="無再発生存期間（RFS）のKaplan–Meier曲線"}
+::: {.callout-note appearance="simple"  title="無再発生存期間（RFS）のKaplan–Meier曲線"}
 
 ```{r}
 cifplot(Event(time_rfs, status_rfs) ~ stoma,
@@ -337,7 +337,7 @@ cifplot(Event(time_rfs, status_rfs) ~ stoma,
 ```
 :::
 
-::: {.callout-note title="累積発生率（CIR）のAalen-Johansen曲線の違い"}
+::: {.callout-note appearance="simple"  title="累積発生率（CIR）のAalen-Johansen曲線の違い"}
 以下のコードでは、`Event(time_cir, status_cir)`のコーディングによって競合リスクを入力しています。
 
 - `status_cir=1` : 関心のあるイベント（再発）
@@ -375,26 +375,29 @@ cifplot(Event(time_cir, status_cir) ~ stoma,
 ::::::::::::::::::::::::::::::::: 
 
 
-::: {.callout-note title="臨床エンドポイントと代替エンドポイント"}
+::: {.callout-note appearance="simple"  title="臨床エンドポイントと代替エンドポイント"}
 OS、DFS、RFSは、特に術後補助化学療法の有効性を評価するときに用いられるアウトカム（エンドポイントともいいます）です。それでは両者は、どのような考え方で使い分けられているのでしょうか。指針の1つになっているのが、医薬品の承認審査の考え方です。たとえば抗悪性腫瘍薬の臨床評価方法に関するガイドライン（厚生労働省2021）では、抗がん剤を承認するためには、生存期間の延長などにもとづき、確実な有効性を示す必要があると述べています。そのため、具体的な指標として、OSが臨床エンドポイント（clinical endpoint）とみなされ、こちらが重視されています（Biomarkers Definitions Working Group 2001）。
 
 その一方で、術後補助化学療法としての抗がん剤の有効性を評価する臨床試験では、代替エンドポイント（surrogate endpoint）として採用することがあります。代替エンドポイントとは、臨床エンドポイントの代わりになることが意図されたもので、臨床上の便益・害の有無を予測することが期待されるものと定義されます。DFSのような代替エンドポイントを用いる最大のメリットは、試験期間が短くなることです。ただし、過去の承認審査では、代替エンドポイントの利用が誤った医薬品評価につながったケースが数多く報告されています（Fleming and Demets 1996）。たとえば、進行大腸がんにおける5FU+ロイコボリン併用療法は、臨床試験で腫瘍縮小がみられたにもかかわらず、臨床エンドポイントであるOSを評価すると、ほとんど延命効果がないことが明らかになりました（Fleming and Demets 1996）。
 :::
 
-::: {.callout-note title="このエピソードに関係するクイズです"}
-2009～2014年にFDAによって承認されたがん領域の医薬品は、83品目あったそうです。奏効率（腫瘍縮小や完全寛解）がエンドポイントの臨床試験を根拠として承認されたのは、83品目のうち何割だったか、正しいものを選びなさい。
+::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
+がん臨床研究で用いられるアウトカムのひとつに無増悪生存期間（progression-free survival）があります。このアウトカムを測定するには、画像による腫瘍増悪の判定が必要になります。このとき、客観性を高めるため、第三者が画像をみて増悪を判定すると、主治医による増悪の判定と一致しないことがあり得ます。この問題は、中央判定と施設判定の不一致と呼ばれます。以下の選択肢のうち、対処法として適切でないものを選びなさい。
 
-1.  0～24%
-2.  25～49%
-3.  50～74%
-4.  75～100%
+1.  統計解析では、客観性が高い中央判定の結果を採用する
+2.  統計解析では、中央判定と施設判定のうち、先に起きたものを採用する
+3.  症例検討会を開き、中央判定と施設判定の結果が一致しない患者の扱いを医学的に決定する
+4.  中央判定を採用した解析と、施設判定を採用した解析の、2通りを行う
 :::
 
-::: {.callout-note collapse="true" title="答えはこちら"}
+::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
 -   **正解は2です**
 
-Kim and Prasad（2016）の総説論文によると、奏効率の結果に基づいて承認されたのは83品目のうち31品目と報告されています。また、エンドポイントの内訳は通常承認と加速承認では異なります。通常承認では、品目55品目のうち48品目が全生存期間、無増悪生存期間、無病生存期間で評価されたのに対し、加速承認では、奏効率を主要エンドポイントとする第II相試験の結果を根拠にした品目が大多数でした。
+中央判定と施設判定のうち、先に起きたものを採用すると、無増悪生存期間が短くなる方向にバイアスが生じるため、適切ではありません。
+
+ひとつだけ注意があります。施設判定ではなく中央判定を必ず採用すべき、というわけではありません。施設で増悪になった後、それが追跡状況や画像検査の頻度に影響したり、施設の担当医の治療方針が変化したりすることがあります。このような状況では、施設判定を用いることが適切かもしれません。
 :::
+
 
 ### 文献
 
