--- a/jp/effects-1.qmd
+++ b/jp/effects-1.qmd
@@ -147,7 +147,7 @@ a:hover {
 
 ------------------------------------------------------------------------
 
-### 98%って聞いたら100人いたら98人に効くって思わない？
+### 95%って聞いたら100人いたら95人に効くって思わない？
 
 ::: {.callout-note appearance="simple"  collapse="true" title="前回までのあらすじ"}
 はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、医師である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。それからというもの、父は娘に統計の話をふるチャンスをうかがっていた。
@@ -163,7 +163,7 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「うん、ホットコーヒーあったまるよね。そういえばこの前出たワクチンについてなんだけどね。外来で"有効率98%"って患者さんに聞かれたんだけど、こういう統計って私もちょっと混乱するんだよね」
+私「うん、ホットコーヒーあったまるよね。そういえばこの前出たワクチンについてなんだけどね。外来で"有効率95%"って患者さんに聞かれたんだけど、こういう統計って私もちょっと混乱するんだよね」
 :::
 
 ::: voice-father
@@ -175,11 +175,11 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「それとは別。うん、そこは日本語特有の言い回しだから間違えやすいよね。この場合の率は百分率の意味で使っているんだけど、疫学でいう率（rate）とは計算が違うんだ。ややこしいのはそこだけじゃない。この場合の98%は、プラセボに比べて発症リスクが98%って意味だから」
+お父さん「それとは別。うん、そこは日本語特有の言い回しだから間違えやすいよね。この場合の率は百分率の意味で使っているんだけど、疫学でいう率（rate）とは計算が違うんだ。ややこしいのはそこだけじゃない。この場合の95%は、プラセボに比べて発症リスクが95%って意味だから」
 :::
 
 ::: voice-daughter
-私「ん？100人いたら98人に効くって意味じゃないの？」
+私「ん？100人いたら95人に効くって意味じゃないの？」
 :::
 
 ::: voice-father
@@ -243,8 +243,25 @@ a:hover {
 お父さん「いや、聞けばすぐわかるよ。ワクチン有効率の数字は、臨床データから推定されたものでしょ。たくさんの参加者を対象に臨床試験を行って、実際に観察された結果を、ぎゅっと要約したものが、この数字なんだ。でも、データ上でどんな結果が観察されたか、ワクチン有効率だけでは伝わらないでしょ。こういうのを"数字が独り歩きする"っていうんだ」
 :::
 
+::: {.callout-note appearance="simple"  title="ワクチンランダム化臨床試験の数値例"}
+
+次の表は、ワクチンとプラセボを比較した仮想的な臨床試験のデータです。表の人数からワクチン有効率を計算すると以下のような結果が得られます。
+
+|          | ワクチン群 | プラセボ群 |
+|----------|------------|------------|
+| 発症あり |        40  |        800 |
+| 発症なし |       960  |        200 |
+|発症リスク|        4%  |        80% |
+
+$\pi_1 = 40/1000 = 0.04$ 
+
+$\pi_2 = 800/1000 = 0.8$ 
+
+$VF=\frac{\pi_2-\pi_1}{\pi_2}=95 \%$
+:::
+
 ::: voice-daughter
-私「確かにね。98%有効っていう数字だけみると、”ほぼ確実に救える”って意味に捉えがちだけど、よく考えたらワクチンにそこまでの効果はないよね。統計を使ったレトリックに騙されちゃいそう」
+私「確かにね。95%有効っていう数字だけみると、”ほぼ確実に救える”って意味に捉えがちだけど、よく考えたらワクチンにそこまでの効果はないよね。統計を使ったレトリックに騙されちゃいそう」
 :::
 
 ::: voice-father
@@ -252,6 +269,17 @@ a:hover {
 :::
 
 ::::::::::::::::::::::::::::::::: 
+
+::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
+奏効率（response rate）とは、抗がん剤による治療を行った結果、何割の患者で腫瘍が縮小したか（完全奏効または部分奏効を達成したか）や血液から腫瘍細胞が消えたか（完全寛解）を表す指標です。この用語は広く用いられていますが、Japan Clinical Oncology Group（JCOG）では奏効割合（response proportion）という表現を好んでいます（Japan Clinical Oncology Group 2021）。
+
+さて、次の指標のうち、率（rate）に該当するのはどれでしょうか。
+
+1.  打率
+2.  男女比率
+3.  有病率
+4.  死亡率
+:::
 
 ::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
 -   **正解は4です。**
@@ -266,7 +294,6 @@ a:hover {
 
 「死亡率」は死亡件数÷観察人年であり、「率」になります。
 :::
-
 
 ### Continuation of their story
 
