--- a/jp/effects-4.qmd
+++ b/jp/effects-4.qmd
@@ -171,7 +171,7 @@ a:hover {
 :::
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note title="リスク比はオッズ比の近似か"}
+::: {.callout-note appearance="simple" title="リスク比はオッズ比の近似か"}
 
 表1は、2群の疾患リスク$\pi_1$と$\pi_2$の数値を0.1から0.9まで動かして、リスク比、オッズ比、オッズ比の平方根（square root of OR）を計算したものです。
 
@@ -231,21 +231,21 @@ $\pi_1$と$\pi_2$のどちらかが0.2を超えると、リスク比とオッズ
 :::
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note title="ケース・コントロール研究とオッズ比"}
+::: {.callout-note appearance="simple"  title="ケース・コントロール研究とオッズ比"}
 
 古典的なケース・コントロール研究は、コホートの中から疾患を発生したケースを特定し、疾患を発生しなかったものの中からコントロールを選択し、ケースとコントロールの曝露状況を比較する研究です。言い換えると、この研究デザインでは、一部の集団のみ（ケースとコントロールのみ）について、過去の曝露状況を調査します。そうすると、コホートの一部しか曝露状況がわからないから、曝露群・非曝露群のリスクの分母がわかりませんよね。そこで、リスク比の代わりに「曝露オッズ比」を求める、と疫学の教科書には書かれています。ただし、古典的なケース・コントロール研究とは違い、最近ではデータベースが利用できたり、研究デザインを工夫していたりするため、リスク比を計算できる状況も増えてきています。
 :::
 
-::: {.callout-note title="このエピソードに関係するクイズです"}
+::: {.callout-note appearance="simple"  title="このエピソードに関係するクイズです"}
 
-リスク比とオッズ比が1より小さいとき、オッズ比はリスク比より必ず小さくなるといいました。それでは、2群をオッズ比で比較するときのp値は、リスク比で比較するときのp値より、小さくなる（つまり有意になりやすいので得をする）のでしょうか。実際にデータから計算されたp値だと、検定の種類の選び方に影響されるし、偶然性も入るので、理論上の期待値がどうなるか考えてみてください。
+リスク比とオッズ比が1より小さいとき、オッズ比はリスク比より必ず小さくなるといいました。それでは、2群をオッズ比で比較するときのp値は、リスク比で比較するときのp値より、小さくなる（つまり有意になりやすく、検出力が向上する）のでしょうか。ただし。実際にデータから計算されたp値だと、検定の種類の選び方に影響されるし、偶然性も入ります。理論上の期待値がどうなるか考えてみてください。
 
 1.  オッズ比のp値は、リスク比のp値より、期待値の上で小さい
 2.  オッズ比のp値は、リスク比のp値より、期待値の上で大きい
 3.  オッズ比のp値は、リスク比のp値と、期待値の上で等しい
 :::
 
-::: {.callout-note collapse="true" title="答えはこちら"}
+::: {.callout-note appearance="simple"  collapse="true" title="答えはこちら"}
 -   **正解は3です**
 
 リスク比やオッズ比は最尤法で推定することが普通です。最尤法を用いるとき、検定の性能（検出力など）は、指標の選び方によらず一定、ということが統計学で知られています。直感的な説明をすると、“同じデータから同じ情報を引き出している”から、どの指標を使って差を推定しても、検定としての力は変わらないのです。
