--- a/jp/study-design-2.qmd
+++ b/jp/study-design-2.qmd
@@ -367,30 +367,22 @@ cifplot(Event(time, status) ~ stoma,
 ```
 :::
 
-::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
-奏効率（response rate）とは、抗がん剤による治療を行った結果、何割の患者で腫瘍が縮小したか（完全奏効または部分奏効を達成したか）や血液から腫瘍細胞が消えたか（完全寛解）を表す指標です。この用語は広く用いられていますが、Japan Clinical Oncology Group（JCOG）では奏効割合（response proportion）という表現を好んでいます（Japan Clinical Oncology Group 2021）。
+::: {.callout-note appearance="simple"  title="このエピソードに関係するクイズです"}
+2009～2014年にFDAによって承認されたがん領域の医薬品は、83品目あったそうです。奏効率（腫瘍縮小や完全寛解）がエンドポイントの臨床試験を根拠として承認されたのは、83品目のうち何割だったか、正しいものを選びなさい。
 
-さて、次の指標のうち、率（rate）に該当するのはどれでしょうか。
-
-1.  打率
-2.  男女比率
-3.  有病率
-4.  死亡率
+1.  0～24%
+2.  25～49%
+3.  50～74%
+4.  75～100%
 :::
 
-::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
--   **正解は4です。**
+::: {.callout-note appearance="simple"  collapse="true" title="答えはこちら"}
+-   **正解は2です**
 
-割合、率、比の3つの違いについて説明しましょう。比とは、ある量を別の量で割ったもののことです。たとえば、BMIは体重を身長で割ったものですから比の一種で、単位はkg/m2です。割合は、一部の数を全体の数で割ったもの（言い換えると、分母が分子を含んでいるもの）です。割合は、もちろん2値データや分類データを要約するために用いられる指標ですよね。この指標は、言葉の定義からいって、比の一種です。しかし、割合は、①100%を超えない、②人数を人数で割っているためキャンセルして単位がない（無単位）という特徴があります。割合と区別してほしいのが率です。たとえば胃がんの発生率（incidence rate of gastric cancer）というと、一定時間に胃がんが発生するスピードで、人年法（胃がんの発生数/観察人年）で計算されます。人数を人数×年で割っているため、単位は1/年（より一般には1/時間）です。
-
-「打率」は安打数÷打数であり、「割合」になります。
-
-「男女比率」は男性の人数÷女性の人数であり、「比」になります。
-
-「有病率」は疾患を有する人の人数÷全体の人数であり、「割合」になります。
-
-「死亡率」は死亡件数÷観察人年であり、「率」になります。
+Kim and Prasad（2016）の総説論文によると、奏効率の結果に基づいて承認されたのは83品目のうち31品目と報告されています。また、エンドポイントの内訳は通常承認と加速承認では異なります。通常承認では、品目55品目のうち48品目が全生存期間、無増悪生存期間、無病生存期間で評価されたのに対し、加速承認では、奏効率を主要エンドポイントとする第II相試験の結果を根拠にした品目が大多数でした。
 :::
+
+
 
 ### Continuation of their story
 
