--- a/jp/effects-5.qmd
+++ b/jp/effects-5.qmd
@@ -183,7 +183,7 @@ a:hover {
 :::
 :::::::::::::::::::::::::::::::::
 
-::: {.callout-note title="生存曲線とハザードの関係"}
+::: {.callout-note appearance="simple" title="生存曲線とハザードの関係"}
 
 これまでのエピソードでは、ある時点までのリスクを扱ってきましたが、今度は“時間に沿って変化するリスク”を推定したKaplan-Meier曲線について正式に説明します。Kaplan-Meier曲線は、そもそも2値データではなく生存時間データに用いられる手法でした。そのため、Kaplan-Meier曲線は時間軸を横にとったグラフですし、いわゆるハザード比との関係も知りたいところですよね。ここでは、ハザードが時間を通じて一定という単純な状況で、そのあたりを整理しましょう。
 
@@ -199,7 +199,7 @@ $\pi=1-S(x)=1-\mathrm{exp}(-\lambda x)$
 :::
 
 
-::: {.callout-note collapse="true" title="データ生成に用いるgenerate_data()のコードはこちら"}
+::: {.callout-note appearance="simple" collapse="true" title="データ生成に用いるgenerate_data()のコードはこちら"}
 ```{r warning=FALSE}
 generate_data <- function(n=200, hr1, hr2) {
   stoma <- rbinom(n, size = 1, prob = 0.4)
@@ -249,7 +249,7 @@ generate_data <- function(n=200, hr1, hr2) {
 ```
 :::
 
-::: {.callout-note title="cifplot()によるKaplan-Meier曲線"}
+::: {.callout-note appearance="simple" title="cifplot()によるKaplan-Meier曲線"}
 イメージしやすいように、以前`cifmodeling`パッケージの`cifplot()`で描いたKaplan–Meier曲線を置いておきます。
 
 ```{r warning=FALSE}
@@ -276,7 +276,7 @@ cifplot(Event(time_os, status_os) ~ stoma,
 :::
 :::::::::::::::::::::::::::::::::
 
-::: {.callout-note title="ハザードと生存時間中央値の関係"}
+::: {.callout-note appearance="simple" title="ハザードと生存時間中央値の関係"}
 さて、ハザードは生存曲線が下がるスピードを決める数値です。生存時間がどのくらいの長さなのかは、中央値で測ることができます。生存時間中央値$M$は、生存確率50%つまり$S(x)=0.5$になるような時間$x$のことです。つまり、指数分布では
 
 $0.5=\mathrm{exp}(-\lambda M)$
@@ -296,8 +296,7 @@ $M = \frac{\log 2}{\lambda} \approx \frac{0.7}{\lambda}$
 :::
 ::::::::::::::::::::::::::::::::: 
 
-
-::: {.callout-note title="リスクとハザード比の関係"}
+::: {.callout-note appearance="simple" title="リスクとハザード比の関係"}
 
 群1と群2のアウトカムを比較する状況を考えましょう。群1の時点$x$の疾患リスクを$\pi_1$、群2の時点$x$の疾患リスクを$\pi_2$とします。さらに、それぞれの群のハザードを$\lambda_1$と$\lambda_2$、生存時間中央値を$M_1$と$M_2$とします。
 
@@ -353,7 +352,7 @@ $M = \frac{\log 2}{\lambda} \approx \frac{0.7}{\lambda}$
 :::
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note title="シミュレーションデータにおける時点ごとのリスク比の推定"}
+::: {.callout-note appearance="simple" title="シミュレーションデータにおける時点ごとのリスク比の推定"}
 
 さっきの「見えない時計」をデータで眺めてみましょう。以前と同じ、ストーマ造設の有無で死亡のハザードが異なる生存時間データをシミュレーションし、**時点ごとのリスク比（RR）** を推定してみます。**ハザード比**は「時計の速さの比」でしたが、「術後10年時点の死亡リスクは、ストーマあり群が何倍か」のようにリスク比の方が、解釈しやすいこともあります。Cox回帰では時点を通じて1つのハザード比を仮定するのに対して、`cifmodeling`の`polyreg()`では、時点を通じて一定のリスク比だけでなく、任意の時点tごとのリスク比も推定できます。
 
