--- a/jp/frequentist-1.qmd
+++ b/jp/frequentist-1.qmd
@@ -153,7 +153,7 @@ a:hover {
 
 ### 生存曲線まわりの数値を読み解く
 
-::: {.callout-note collapse="true" title="前回までのあらすじ"}
+::: {.callout-note appearance="simple"  collapse="true" title="前回までのあらすじ"}
 はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、医師である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。おなじ復職状況でも、2値データと生存時間データの2通り解析の仕方があると教えられた娘。上司に読むことを勧められた論文で、OS・DFSという用語が出てきたことを思い出すのだった。
 :::
 
@@ -245,7 +245,7 @@ a:hover {
 :::
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note title="このエピソードに関係するクイズです"}
+::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
 
 予後がどのくらいかを説明するために、がん患者の余命を用いることがあります。胃がん手術後の余命をJCOG9502の図から読み取ることができるでしょうか。
 
@@ -254,10 +254,14 @@ a:hover {
 3.  図AとBどちらからも読み取ることができない
 :::
 
-::: {.callout-note collapse="true" title="答えはこちら"}
+::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
 -   **正解は1です**
 
-胃がん手術後の余命を表す指標として、生存期間の平均値または中央値がありますが、図から読み取りやすいのは生存期間中央値です。この指標は、患者のうち50%が生存している時点のことですから、図AのSurvivalが50%になる時点に対応しています。つまりKaplan-Meier曲線が50%まで下がった時点を読み取ればよいのです。
+胃がん手術後の余命を表す指標として、生存期間の平均値または中央値がありますが、図から読み取りやすいのは生存期間中央値です。
+
+生存期間は、日数や年数のような数値データですから、連続データに近い特徴を持っています。連続データでは、中央値（median）は上位50%に相当する値のことですよね。半数以上の対象者がイベントを起こして、生存期間が確定すれば、たとえ打ち切りがあっても、生存期間中央値を求めることができます。
+
+具体的には、生存期間中央値は、50%が生存している時点、すなわち図AのSurvivalが50%になる時点に対応しています。つまりKaplan-Meier曲線が50%まで下がった時点を読み取ればよいのです。
 :::
 
 ### 文献
