--- a/jp/effects-4.qmd
+++ b/jp/effects-4.qmd
@@ -182,8 +182,13 @@ $OR=\frac{\pi_1/(1-\pi_1)}{\pi_2/(1-\pi_2)}$
 $SOR=\sqrt{\frac{\pi_1/(1-\pi_1)}{\pi_2/(1-\pi_2)}}$
 
 $\pi_1$と$\pi_2$のどちらかが0.2を超えると、リスク比とオッズ比はまったく違う値になることがわかります。リスク比とオッズ比が1より小さいとき、オッズ比はリスク比より必ず小さくなります。また、$\pi_1$と$\pi_2$が0.2～0.7の範囲であれば、リスク比とオッズ比の平方根は、高々0.11しか違いません。
+:::
 
-2群の疾患リスクを0.1から0.9まで動かしたときのリスク比（RR）、オッズ比（OR）、オッズ比の平方根（SOR）
+
+::: panel-tabset
+### 疾患リスク0.1～0.4
+
+表1. 2群の疾患リスクを0.1から0.9まで動かしたときのリスク比（RR）、オッズ比（OR）、オッズ比の平方根（SOR）
 
 |     | 0.1 | 0.2 | 0.3 | 0.4 | 0.5 | 0.6 | 0.7 | 0.8 | 0.9 |
 |-----|-----|-----|-----|-----|-----|-----|-----|-----|-----|
@@ -199,6 +204,13 @@ $\pi_1$と$\pi_2$のどちらかが0.2を超えると、リスク比とオッズ
 | 0.4 |     |     |     |RR=1 | 0.80| 0.67| 0.57| 0.50| 0.44|
 |     |     |     |     |OR=1 | 0.67| 0.44| 0.29| 0.17| 0.07|
 |     |     |     |     |SOR=1| 0.82| 0.67| 0.53| 0.41| 0.27|
+
+### 疾患リスク0.5～0.8
+
+表2. 2群の疾患リスクを0.1から0.9まで動かしたときのリスク比（RR）、オッズ比（OR）、オッズ比の平方根（SOR）
+
+|     | 0.1 | 0.2 | 0.3 | 0.4 | 0.5 | 0.6 | 0.7 | 0.8 | 0.9 |
+|-----|-----|-----|-----|-----|-----|-----|-----|-----|-----|
 | 0.5 |     |     |     |     |RR=1 | 0.83| 0.71| 0.63| 0.56|
 |     |     |     |     |     |OR=1 | 0.67| 0.43| 0.25| 0.11|
 |     |     |     |     |     |SOR=1| 0.82| 0.65| 0.50| 0.33|
