--- a/jp/frequentist-4.qmd
+++ b/jp/frequentist-4.qmd
@@ -373,6 +373,9 @@ print(coverage_800)
 お父さん「どれだけサンプルサイズが必要なのかについて、統計学的な根拠に基づいて見積もる方法があるんだよ。この表をみてみて。ある書籍から借りてきたものなんだけど（Machin, et al. 2022）」
 :::
 
+::: panel-tabset
+### 割合0.01～0.15
+
 表1. 割合の推定において指定した 95%信頼区間幅のため必要なサンプルサイズ
 
 | 割合 π | 0.05 | 0.10 | 0.15 | 0.20 |
@@ -392,6 +395,13 @@ print(coverage_800)
 | 0.13   |  696 |  175 |   78 |   44 |
 | 0.14   |  741 |  186 |   83 |   47 |
 | 0.15   |  784 |  196 |   87 |   49 |
+
+### 割合0.16～0.50
+
+表1. 割合の推定において指定した 95%信頼区間幅のため必要なサンプルサイズ
+
+| 割合 π | 0.05 | 0.10 | 0.15 | 0.20 |
+|--------|-----:|-----:|-----:|-----:|
 | 0.16   |  826 |  206 |   92 |   51 |
 | 0.17   |  867 |  216 |   96 |   54 |
 | 0.18   |  907 |  226 |  100 |   56 |
@@ -403,6 +413,8 @@ print(coverage_800)
 | 0.40   | 1472 |  366 |  161 |   89 |
 | 0.45   | 1518 |  377 |  166 |   92 |
 | 0.50   | 1533 |  381 |  167 |   93 |
+:::
+
 
 ::: voice-father
 お父さん「たとえばなんだけどね。復職率を調べたいとするでしょ。そうすると復職率をどれくらい精確に推定できたかを表す指標が、95%信頼区間だよね。仮に復職率が50%だったとしてみよう。そうすると、50%±10%程度の推定精度がほしいよね。ここでいう±の後の数字が、95%信頼区間の幅になるんだ」
