--- a/jp/effects-1.qmd
+++ b/jp/effects-1.qmd
@@ -271,7 +271,7 @@ $VF=\frac{\pi_2-\pi_1}{\pi_2}=95 \%$
 ::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
-奏効率（response rate）とは、抗がん剤による治療を行った結果、何割の患者で腫瘍が縮小したか（完全奏効または部分奏効を達成したか）や血液から腫瘍細胞が消えたか（完全寛解）を表す指標です。この用語は広く用いられていますが、Japan Clinical Oncology Group（JCOG）では奏効割合（response proportion）という表現を好んでいます（Japan Clinical Oncology Group 2021）。
+奏効率（response rate）とは、抗がん剤による治療を行った結果、何割の患者で腫瘍が縮小したか（完全奏効または部分奏効を達成したか）や血液から腫瘍細胞が消えたか（完全寛解）を表す指標です。この用語は広く用いられていますが、Japan Clinical Oncology Group（JCOG）では奏効割合（response proportion）という表現を好んでいます（Japan Clinical Oncology Group 2025）。
 
 さて、次の指標のうち、率（rate）に該当するのはどれでしょうか。
 
@@ -284,7 +284,7 @@ $VF=\frac{\pi_2-\pi_1}{\pi_2}=95 \%$
 ::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
 -   **正解は4です。**
 
-割合、率、比の3つの違いについて説明しましょう。比とは、ある量を別の量で割ったもののことです。たとえば、BMIは体重を身長で割ったものですから比の一種で、単位はkg/m2です。割合は、一部の数を全体の数で割ったもの（言い換えると、分母が分子を含んでいるもの）です。割合は、もちろん2値データや分類データを要約するために用いられる指標ですよね。この指標は、言葉の定義からいって、比の一種です。しかし、割合は、①100%を超えない、②人数を人数で割っているためキャンセルして単位がない（無単位）という特徴があります。割合と区別してほしいのが率です。たとえば胃がんの発生率（incidence rate of gastric cancer）というと、一定時間に胃がんが発生するスピードで、人年法（胃がんの発生数/観察人年）で計算されます。人数を人数×年で割っているため、単位は1/年（より一般には1/時間）です。
+割合、率、比の3つの違いについて説明しましょう。比とは、ある量を別の量で割ったもののことです。たとえば、BMIは体重を身長で割ったものですから比の一種で、単位はkg/m2です。割合は、一部の数を全体の数で割ったもの（言い換えると、分母が分子を含んでいるもの）です。割合は、もちろん2値データや分類データを要約するために用いられる指標ですよね。この指標は、言葉の定義からいって、比の一種です。しかし、割合は、100%を超えなく、そして人数を人数で割っているためキャンセルして単位がない（無単位）という特徴があります。割合と区別してほしいのが率です。たとえば胃がんの発生率（incidence rate of gastric cancer）というと、一定時間に胃がんが発生するスピードで、人年法（胃がんの発生数/観察人年）で計算されます。人数を人数×年で割っているため、単位は1/年（より一般には1/時間）です。
 
 「打率」は安打数÷打数であり、「割合」になります。
 
@@ -294,6 +294,10 @@ $VF=\frac{\pi_2-\pi_1}{\pi_2}=95 \%$
 
 「死亡率」は死亡件数÷観察人年であり、「率」になります。
 :::
+
+### 文献
+
+- [JCOGプロトコールマニュアル version 3.8 [Internet]. 東京: Japan Clinical Oncology Group; 2025](https://jcog.jp/doctor/tool/manual/) 
 
 ### Continuation of their story
 
