--- a/jp/frequentist-5.qmd
+++ b/jp/frequentist-5.qmd
@@ -280,7 +280,7 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 ::: panel-tabset
 ### 検出力80%
 
-表1. 2群の生存曲線を比較するためのサンプルサイズ（検出力 80%）\
+表1. 2群の生存曲線を比較するためのサンプルサイズ\
 両側 α=0.05, 1−β=0.8\
 ※ 数値は「2群合計のサンプルサイズ」（割付け比1:1）
 
@@ -305,7 +305,7 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 
 ### 検出力90%
 
-表2. 2群の生存曲線を比較するためのサンプルサイズ（検出力 90%）\
+表1. 2群の生存曲線を比較するためのサンプルサイズ\
 両側 α=0.05, 1−β=0.9\
 ※ 数値は「2群合計のサンプルサイズ」（割付け比1:1）
 
