--- a/jp/logistic-regression-1.qmd
+++ b/jp/logistic-regression-1.qmd
@@ -382,6 +382,37 @@ LDLコレステロール(mmol/L) =LDL コレステロール(mg/dL) ×0.02586
 これは単位を換算にするにはどうすればよいかという問題です。ある共変量*X*の効果は、回帰係数*β*との積（*βX*）で表され、それは共変量の単位によらず一定ですよね。このことに気づくと、答えに近づきます。*X*の単位を定数倍すると、*β*は定数分の一に換算されます。ただし、ロジスティック回帰では、回帰係数からロジット関数を経由してオッズ比を求めるため、単位を換算するには、1/0.02586乗のようにべき乗の操作をすることになります。
 :::
 
+
+
+
+
+![](clinical-trial-2.png)
+
+![](clinical-trial-3.png)
+
+
+::: {.callout-note appearance="simple"  title="このエピソードに関係するクイズです"}
+
+がん臨床試験では、治療からどの程度生存したかを表す指標として、生存期間中央値（median survival）を求めることがあります。これは生存時間データであるOSから計算される値です。さて、生存期間中央値を報告してよいのは、どのような場合でしょうか？
+
+1.  半数以上の対象者がイベントを起こしたとき
+2.  目安としてサンプルサイズが100人以上のとき
+3.  すべての対象者が予定された追跡期間を完了したとき
+4.  1、2、3すべて誤り
+:::
+
+
+::: {.callout-note appearance="simple"  collapse="true" title="答えはこちら"}
+-   **正解は1です**
+
+柔軟に考えてみましょう。生存期間は、日数や年数のような数値データですから、連続データに近い特徴を持っています。連続データでは、中央値（median）は上位50%に相当する値のことですよね。半数以上の対象者がイベントを起こして、生存期間が確定すれば、たとえ打ち切りがあっても、生存期間中央値を求めることができます。もし、予定された追跡期間を全員が完了したとしても、イベントがじゅうぶんに観察されなければ（つまり打ち切りが多かったら）、統計的なテクニックで中央値を計算することはできますが、バイアスが生じる可能性が高くなります。
+:::
+
+
+
+
+
+
 ### 文献
 
 - [田中司朗. 医学研究のための因果推論I. 一般化線型モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12270)
